Add integration test, update readme
