# app/docs/swagger.json
@@ -9,6 +9,65 @@
     "host": "localhost:8085",
     "basePath": "/api/v1",
     "paths": {
+        "/admin/loan/approve": {
+            "post": {
+                "description": "approve a loan",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Loan Approval"
+                ],
+                "summary": "Approve a loan",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer admin-token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "loan approval request",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.LoanApproveRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GenericSuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/app_errors.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/app_errors.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app_errors.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/admin/login": {
             "post": {
                 "description": "Responds with the bearer token with admin role",
@@ -101,9 +160,9 @@
                 }
             }
         },
-        "/loan/approve": {
+        "/user/loan": {
             "post": {
-                "description": "approve a loan",
+                "description": "Create a loan for a customer, responds with the newly created loan details",
                 "consumes": [
                     "application/json"
                 ],
@@ -111,24 +170,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Loan Approval"
+                    "Loans"
                 ],
-                "summary": "Approve a loan",
+                "summary": "Create a loan for a customer",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer admin-token",
+                        "description": "Bearer customer-token",
                         "name": "token",
                         "in": "header",
                         "required": true
                     },
                     {
-                        "description": "loan approval request",
+                        "description": "loan creation request",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoanApproveRequest"
+                            "$ref": "#/definitions/dto.LoanCreateRequest"
                         }
                     }
                 ],
@@ -136,17 +195,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.GenericSuccessResponse"
+                            "$ref": "#/definitions/dto.LoanDetails"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/app_errors.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/app_errors.ErrorResponse"
                         }
@@ -160,7 +213,7 @@
                 }
             }
         },
-        "/loan/repayment": {
+        "/user/loan/repayment": {
             "post": {
                 "description": "repay a repayment, mark loan as paid when all repayment paid",
                 "consumes": [
@@ -206,59 +259,6 @@
                     },
                     "404": {
                         "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/app_errors.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/app_errors.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/loan": {
-            "post": {
-                "description": "Create a loan for a customer, responds with the newly created loan details",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Loans"
-                ],
-                "summary": "Create a loan for a customer",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer customer-token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "loan creation request",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.LoanCreateRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.LoanDetails"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/app_errors.ErrorResponse"
                         }
